# cognizantaiml140426

./: README.md
banking_project/: pyproject.toml
banking_project/config/: logger.py  settings.py
banking_project/data/: accounts.json  transactions.json
banking_project/src/: account.py  credit.py  debit.py  exceptions.py  main.py  storage.py  transaction.py  utils.py
day2/: pyproject.toml
day2/day2env/: pyvenv.cfg
day2/docs/source/: conf.py  index.rst
day2/ecomerce.egg-info/: SOURCES.txt  requires.txt  top_level.txt
day2/src/: app.py  start.py
day2/src/models/: customer.py
day2/src/store/: customerstore.py
day2/src/view/: customerviwe.py
day3/: .gitignore  pyproject.toml
day3/src/healthcare_app/: __init__.py  doctor.py  main.py  patient.py
day33/: pyproject.toml
day33/conf/: logger_cof.py
day33/day33env/: pyvenv.cfg
day33/healthcare.egg-info/: SOURCES.txt  requires.txt
day33/src/exceptions/: doctor_not_found_exceptions.py  patient_not_found_exceptions.py
day33/src/models/: appoinment.py  docter.py  pationt.py
day33/src/stores/: doctorstore.py  patientstore.py
day33/src/utils/: app.py
day5/: .env  pyproject.toml
day5/day5env/: pyvenv.cfg
day5/exception/: coustomer_not_found.py
day5/src/Banking_Project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
day5/src/configuration/: conf.py
day5/src/dataloaders/: coustomer_csv_data_loder.py  coustomer_data_loader.py  customer_json_data_loader.py  customer_txt_data_loader.py
day5/src/models/: address.py  company_type.py  corporate.py  customer.py  full_name.py  gender.py  individual.py
day5/src/resources/: coustomers.json  coustomers.txt  customers.csv  customers_dev.csv
day5/src/stores/: customer_store.py  customer_store_impl.py
day5/src/utils/: app.py
day6/: pyproject.toml
day6/day6env/: pyvenv.cfg
day6/src/asyncio_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
day6/src/configuration/: conf.py
day6/src/utils/: clock.py  main.py
