[project]
name = "banking-project"
version = "0.1.0"
description = "Simple banking system using Python"
authors = [
    { name = "Yathish Jadav" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
